adding to lexer

--- a/SapirCompiler/SapirCompiler.vcxproj.filters
+++ b/SapirCompiler/SapirCompiler.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="HashMap.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Token.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HashMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tokens.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
