--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="Program.c" />
+    <ClCompile Include="Token.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="Lexer.h" />
+    <ClInclude Include="Tokens.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
