StringIn to check for Keywords

--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -131,12 +131,14 @@
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="Program.c" />
+    <ClCompile Include="StringIn.c" />
     <ClCompile Include="Token.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayList.h" />
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="Lexer.h" />
+    <ClInclude Include="StringIn.h" />
     <ClInclude Include="Tokens.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
