--- a/SapirCompiler/SapirCompiler.vcxproj.filters
+++ b/SapirCompiler/SapirCompiler.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ArrayList.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StringIn.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ArrayList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StringIn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
