--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -131,6 +131,8 @@
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="HashSet.c" />
     <ClCompile Include="Lexer.c" />
+    <ClCompile Include="LinkedList.c" />
+    <ClCompile Include="ParserTableGenerator.c" />
     <ClCompile Include="Program.c" />
     <ClCompile Include="StringIn.c" />
     <ClCompile Include="Token.c" />
@@ -140,6 +142,7 @@
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="HashSet.h" />
     <ClInclude Include="Lexer.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="StringIn.h" />
     <ClInclude Include="Tokens.h" />
   </ItemGroup>
