--- a/SapirCompiler/SapirCompiler.vcxproj.filters
+++ b/SapirCompiler/SapirCompiler.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="HashSet.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParserTableGenerator.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedList.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
@@ -54,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HashSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
