--- a/SapirCompiler/SapirCompiler.vcxproj.filters
+++ b/SapirCompiler/SapirCompiler.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="SyntaxTree.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParserTableSymbols.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SyntaxTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParserTableSymbols.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
