--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="ArrayList.c" />
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="HashSet.c" />
+    <ClCompile Include="IR_CFG.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="LexerFSM.c" />
     <ClCompile Include="LinkedList.c" />
@@ -149,6 +150,7 @@
     <ClInclude Include="ArrayList.h" />
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="HashSet.h" />
+    <ClInclude Include="IR_CFG.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Matrix.h" />
