--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="HashSet.c" />
     <ClCompile Include="IR_CFG.c" />
+    <ClCompile Include="IR_Liveness.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="LexerFSM.c" />
     <ClCompile Include="LinkedList.c" />
@@ -151,6 +152,7 @@
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="HashSet.h" />
     <ClInclude Include="IR_CFG.h" />
+    <ClInclude Include="IR_Liveness.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Matrix.h" />
