--- a/SapirCompiler/SapirCompiler.vcxproj.filters
+++ b/SapirCompiler/SapirCompiler.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="IR_Liveness.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CodeGeneration.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="IR_Liveness.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CodeGeneration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
