--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -130,7 +130,9 @@
     <ClCompile Include="ArrayList.c" />
     <ClCompile Include="CodeGeneration.c" />
     <ClCompile Include="Compiler.c" />
+    <ClCompile Include="ConsoleInput.c" />
     <ClCompile Include="ErrorHandler.c" />
+    <ClCompile Include="FileInput.c" />
     <ClCompile Include="HashMap.c" />
     <ClCompile Include="HashSet.c" />
     <ClCompile Include="IR_CFG.c" />
@@ -150,7 +152,9 @@
     <ClInclude Include="ArrayList.h" />
     <ClInclude Include="CodeGeneration.h" />
     <ClInclude Include="Compiler.h" />
+    <ClInclude Include="ConsoleInput.h" />
     <ClInclude Include="ErrorHandler.h" />
+    <ClInclude Include="FileInput.h" />
     <ClInclude Include="HashMap.h" />
     <ClInclude Include="HashSet.h" />
     <ClInclude Include="IR_CFG.h" />
