--- a/SapirCompiler/SapirCompiler.vcxproj
+++ b/SapirCompiler/SapirCompiler.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ArrayList.c" />
+    <ClCompile Include="ParserTableBNFRules.c" />
     <ClCompile Include="CodeGeneration.c" />
     <ClCompile Include="Compiler.c" />
     <ClCompile Include="ConsoleInput.c" />
@@ -144,7 +145,12 @@
     <ClCompile Include="LexerFsmHelper.c" />
     <ClCompile Include="LinkedList.c" />
     <ClCompile Include="Parser.c" />
+    <ClCompile Include="ParserTableFollow.c" />
     <ClCompile Include="ParserTableGenerator.c" />
+    <ClCompile Include="ParserTablesHelper.c" />
+    <ClCompile Include="ParserTablesTables.c" />
+    <ClCompile Include="ParserTableStates.c" />
+    <ClCompile Include="ParserTableSymbols.c" />
     <ClCompile Include="Program.c" />
     <ClCompile Include="Queue.c" />
     <ClCompile Include="Sementic.c" />
